--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
 <body>
   <div class="background">
   <div class="container">
-  <img src="images/image-product-desktop.jpg" alt="Gabrielle Essence eau de parfum">
-  
+  <div class="img"></div>
 <div class="contain">
   <h2>Perfume</h2>
-  <h1>Gabrielle <br> Essence Eau <br> De Parfum</h1>
+  <h1>Gabrielle Essence Eau De Parfum</h1>
 
   <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
   Perfumer-Creator for the House of CHANEL.</p>
